cmake_minimum_required(VERSION 3.15)
project(neuron LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Add your source files here
# add_executable(neuron src/main.cpp)

# Add include directories if needed
# target_include_directories(neuron PRIVATE include)

# Add libraries if needed
# target_link_libraries(neuron PRIVATE some_library)